cmake_minimum_required(VERSION 3.17.3)

project(chemparser)

set(CMAKE_CXX_STANDARD 20)
set(CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(CMAKE_EXPORT_COMPILE_COMMANDS)
    set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES
        ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
endif()

add_executable(${PROJECT_NAME} ${PROJECT_NAME}/main.cpp)

add_subdirectory(${PROJECT_NAME})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_NAME})
target_compile_options(${PROJECT_NAME} PRIVATE -O3 
                                   -Weverything
                                   -Werror
                                   -Wpedantic
                                   -pedantic-errors
                                   -Wshadow
                                   -Wno-old-style-cast
                                   -Wno-documentation
                                   -Wno-padded
                                   -Wno-c++98-compat-pedantic
                                   -Wno-c++98-compat
                                   -Wno-documentation-unknown-command
                                   -Wno-unused-template
                                   -Wno-unused-function
                                   -Wno-return-std-move-in-c++11
                                   -Wno-exit-time-destructors
                                   -Wno-global-constructors)
